# TabularEditorMac

./: LICENSE  README.md  pyproject.toml  temp.py
aurora_tabular_modeller/: main.py
